<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/padding_general"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <EditText
        android:id="@+id/etNombreSesion"
        android:hint="@string/hint_nombre_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <EditText
        android:id="@+id/etClienteUid"
        android:hint="@string/hint_cliente_uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <TextView
        android:text="@string/txt_ejercicios_disponibles"
        android:textColor="@color/color_text_on_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_pequeno"/>

    <EditText
        android:id="@+id/etBuscarEjercicio"
        android:hint="@string/hint_buscar_ejercicio_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_pequeno"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEjerciciosDisponibles"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto_recycler_pequeno"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <TextView
        android:text="@string/txt_ejercicios_sesion"
        android:textColor="@color/color_text_on_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen_pequeno"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEjerciciosSesion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <Button
        android:id="@+id/btnGuardarSesion"
        android:text="@string/btn_guardar_sesion"
        android:textColor="@color/color_text_on_secondary"
        android:backgroundTint="@color/color_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
