<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_general">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_admin_usuarios"
            android:textSize="@dimen/texto_titulo"
            android:textStyle="bold"
            android:textColor="@color/color_text_on_secondary"
            android:layout_marginBottom="@dimen/margen_sesion"/>

        <EditText
            android:id="@+id/inputNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_completo"
            android:inputType="textPersonName"
            android:layout_marginBottom="@dimen/margen_tarjeta" />

        <EditText
            android:id="@+id/inputEmailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/margen_tarjeta" />

        <Spinner
            android:id="@+id/spinnerRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_seccion" />

        <Button
            android:id="@+id/btnGuardarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar_usuario"
            android:backgroundTint="@color/color_primary"
            android:textColor="@color/color_text_on_primary"
            android:layout_marginBottom="@dimen/margen_tarjeta" />

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_password"
            android:textColor="@color/color_text_on_primary"
            android:backgroundTint="@color/color_accent"
            android:layout_marginBottom="@dimen/margen_seccion"/>

        <EditText
            android:id="@+id/inputBuscarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_buscar_usuario"
            android:layout_marginBottom="@dimen/margen_seccion" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerUsuarios"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_recycler"
            android:layout_marginBottom="@dimen/margen_tarjeta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margen_seccion">

            <Button
                android:id="@+id/btnAnterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_anterior" />

            <TextView
                android:id="@+id/txtPagina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagina_default"
                android:textColor="@color/color_text_on_secondary"
                android:layout_marginStart="@dimen/margen_tarjeta"
                android:layout_marginEnd="@dimen/margen_tarjeta" />

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_siguiente" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
