<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_general"
    android:background="@color/color_background">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="@dimen/logo_login"
        android:layout_height="@dimen/logo_login"
        android:src="@drawable/logo"
        android:contentDescription="@string/desc_logo"
        android:layout_marginTop="@dimen/margen_sesion"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/color_text_on_secondary"
        android:textSize="@dimen/texto_titulo"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margen_tarjeta"
        app:layout_constraintTop_toBottomOf="@id/logoView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_sesion"
        android:hint="@string/hint_email"
        android:background="@drawable/input_background"
        android:textColor="@color/color_text_on_secondary"
        android:textColorHint="@color/color_primary"
        android:padding="@dimen/padding_general"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/passInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_tarjeta"
        android:hint="@string/hint_password"
        android:background="@drawable/input_background"
        android:inputType="textPassword"
        android:textColor="@color/color_text_on_secondary"
        android:textColorHint="@color/color_primary"
        android:padding="@dimen/padding_general"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/color_text_on_primary"
        android:backgroundTint="@color/color_primary"
        android:layout_marginTop="@dimen/margen_sesion"
        app:layout_constraintTop_toBottomOf="@id/passInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/goRegisterBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:textColor="@color/color_surface"
        android:backgroundTint="@color/color_secondary"
        android:layout_marginTop="@dimen/margen_tarjeta"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
