<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_general"
    android:background="@color/color_background">

    <TextView
        android:id="@+id/txtBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hola"
        android:textSize="@dimen/texto_subtitulo"
        android:textColor="@color/color_text_on_secondary"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <TextView
        android:id="@+id/txtSesionesCompletadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sesiones_completadas"
        android:textSize="@dimen/texto_general"
        android:textColor="@color/color_text_on_secondary"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <TextView
        android:id="@+id/txtTituloSesionesDisponibles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sesiones_disponibles"
        android:textSize="@dimen/texto_subtitulo"
        android:textStyle="bold"
        android:textColor="@color/color_text_on_secondary"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="@dimen/margen_seccion">

        <LinearLayout
            android:id="@+id/contenedorSesiones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ultimas_sesiones"
        android:textSize="@dimen/texto_general"
        android:textColor="@color/color_text_on_secondary"
        android:layout_marginBottom="@dimen/margen_tarjeta"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/margen_tarjeta">

        <LinearLayout
            android:id="@+id/contenedorSesionesCompletadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:textColor="@color/color_text_on_primary"
        android:backgroundTint="@color/color_accent"/>
</LinearLayout>
